--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -15,4 +15,11 @@ jobs:
     - name: Checkout Repository
       uses: actions/checkout@v2
 
-    
+    - name: Validate Packer Template
+      uses: hashicorp/packer-github-action@main
+      with:
+        command: validate
+        arguments: -syntax-only
+        target: ami.json
+      env:
+        PACKER_LOG: 1
