--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -8,12 +8,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Check out code
-      - uses: actions/checkout@v2
+        uses: actions/checkout@v2
       - name: Validate Packer Template
-      uses: hashicorp/packer-github-action@main
-      with:
-        command: validate
-        arguments: -syntax-only
-        target: ami.json
-      env:
-        PACKER_LOG: 1
+        uses: hashicorp/packer-github-action@main
+        with:
+          command: validate
+          arguments: -syntax-only
+          target: ami.json
+        env:
+            PACKER_LOG: 1 # enable debug log for packer
