fixed syntax error in yml file

--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -1,4 +1,4 @@
-name: pull-request
+name: Packer validate pull-request
 on:
   pull_request:
     branches: [ main ]
@@ -7,13 +7,14 @@ jobs:
   validate:
     runs-on: ubuntu-latest
     steps:
-      - name: Check out code
-      - uses: actions/checkout@v2
-      - name: Validate Packer Template
-      uses: hashicorp/packer-github-action@main
-      with:
-        command: validate
-        arguments: -syntax-only
-        target: ami.json
-      env:
-        PACKER_LOG: 1
+      - name: Check out Repo
+        uses: actions/checkout@v2
+              
+      - name: Validate Packer
+        uses: hashicorp/packer-github-actions@master
+        with:
+          command: validate
+          arguments: -syntax-only
+          target: ami.json
+        env:
+          PACKER_LOG: 1
