--- a/codeDeploy/.github/workflows/buildAmi.yml
+++ b/codeDeploy/.github/workflows/buildAmi.yml
@@ -1,8 +1,7 @@
 name: Run packer build on a template file
 on:
   push:
-    branches:
-        - 'main'
+    branches: [ main ]
 jobs:
   packer_build:
     runs-on: ubuntu-latest
