--- a/.github/workflows/buildAmi.yml
+++ b/.github/workflows/buildAmi.yml
@@ -4,7 +4,7 @@ on:
     branches: [ main ]
 jobs:
   packer_build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
