--- a/.github/workflows/buildAmi.yml
+++ b/.github/workflows/buildAmi.yml
@@ -12,7 +12,7 @@ jobs:
         uses: hashicorp/packer-github-actions@master
         with:
           command: build
-          varFile: 'variables.json'
+          arguments: '-var-file=variables.json'
           target: 'ami.json'          
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
